--- a/Energy demand prediction using machine learning.ipynb
+++ b/Energy demand prediction using machine learning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "2022-01-01 09:00:00      No          77.992214  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -290,163 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Temperature</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>SquareFootage</th>\n",
-       "      <th>Occupancy</th>\n",
-       "      <th>HVACUsage</th>\n",
-       "      <th>LightingUsage</th>\n",
-       "      <th>RenewableEnergy</th>\n",
-       "      <th>DayOfWeek</th>\n",
-       "      <th>Holiday</th>\n",
-       "      <th>EnergyConsumption</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2022-01-01 00:00:00</th>\n",
-       "      <td>25.139433</td>\n",
-       "      <td>43.431581</td>\n",
-       "      <td>1565.693999</td>\n",
-       "      <td>5</td>\n",
-       "      <td>On</td>\n",
-       "      <td>Off</td>\n",
-       "      <td>2.774699</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>No</td>\n",
-       "      <td>75.364373</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-01 01:00:00</th>\n",
-       "      <td>27.731651</td>\n",
-       "      <td>54.225919</td>\n",
-       "      <td>1411.064918</td>\n",
-       "      <td>1</td>\n",
-       "      <td>On</td>\n",
-       "      <td>On</td>\n",
-       "      <td>21.831384</td>\n",
-       "      <td>Saturday</td>\n",
-       "      <td>No</td>\n",
-       "      <td>83.401855</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-01 02:00:00</th>\n",
-       "      <td>28.704277</td>\n",
-       "      <td>58.907658</td>\n",
-       "      <td>1755.715009</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Off</td>\n",
-       "      <td>Off</td>\n",
-       "      <td>6.764672</td>\n",
-       "      <td>Sunday</td>\n",
-       "      <td>No</td>\n",
-       "      <td>78.270888</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-01 03:00:00</th>\n",
-       "      <td>20.080469</td>\n",
-       "      <td>50.371637</td>\n",
-       "      <td>1452.316318</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Off</td>\n",
-       "      <td>On</td>\n",
-       "      <td>8.623447</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>No</td>\n",
-       "      <td>56.519850</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-01-01 04:00:00</th>\n",
-       "      <td>23.097359</td>\n",
-       "      <td>51.401421</td>\n",
-       "      <td>1094.130359</td>\n",
-       "      <td>9</td>\n",
-       "      <td>On</td>\n",
-       "      <td>Off</td>\n",
-       "      <td>3.071969</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>No</td>\n",
-       "      <td>70.811732</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Temperature   Humidity  SquareFootage  Occupancy  \\\n",
-       "Timestamp                                                               \n",
-       "2022-01-01 00:00:00    25.139433  43.431581    1565.693999          5   \n",
-       "2022-01-01 01:00:00    27.731651  54.225919    1411.064918          1   \n",
-       "2022-01-01 02:00:00    28.704277  58.907658    1755.715009          2   \n",
-       "2022-01-01 03:00:00    20.080469  50.371637    1452.316318          1   \n",
-       "2022-01-01 04:00:00    23.097359  51.401421    1094.130359          9   \n",
-       "\n",
-       "                    HVACUsage LightingUsage  RenewableEnergy  DayOfWeek  \\\n",
-       "Timestamp                                                                 \n",
-       "2022-01-01 00:00:00        On           Off         2.774699     Monday   \n",
-       "2022-01-01 01:00:00        On            On        21.831384   Saturday   \n",
-       "2022-01-01 02:00:00       Off           Off         6.764672     Sunday   \n",
-       "2022-01-01 03:00:00       Off            On         8.623447  Wednesday   \n",
-       "2022-01-01 04:00:00        On           Off         3.071969     Friday   \n",
-       "\n",
-       "                    Holiday  EnergyConsumption  \n",
-       "Timestamp                                       \n",
-       "2022-01-01 00:00:00      No          75.364373  \n",
-       "2022-01-01 01:00:00      No          83.401855  \n",
-       "2022-01-01 02:00:00      No          78.270888  \n",
-       "2022-01-01 03:00:00      No          56.519850  \n",
-       "2022-01-01 04:00:00      No          70.811732  "
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +315,7 @@
       "\u001b[1;31mKeyError\u001b[0m: 'Timestamp'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTimestamp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[33], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTimestamp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
       "File \u001b[1;32mc:\\Users\\DELL\\anaconda333\\Lib\\site-packages\\pandas\\core\\frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[1;32mc:\\Users\\DELL\\anaconda333\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3796\u001b[0m     ):\n\u001b[0;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[1;31mKeyError\u001b[0m: 'Timestamp'"
@@ -482,6 +333,99 @@
    "outputs": [],
    "source": [
     "df = pd.get_dummies(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     Temperature   Humidity  SquareFootage  Occupancy  \\\n",
+      "Timestamp                                                               \n",
+      "2022-01-01 00:00:00    25.139433  43.431581    1565.693999          5   \n",
+      "2022-01-01 01:00:00    27.731651  54.225919    1411.064918          1   \n",
+      "2022-01-01 02:00:00    28.704277  58.907658    1755.715009          2   \n",
+      "2022-01-01 03:00:00    20.080469  50.371637    1452.316318          1   \n",
+      "2022-01-01 04:00:00    23.097359  51.401421    1094.130359          9   \n",
+      "2022-01-01 05:00:00    29.576037  36.824263    1871.709180          6   \n",
+      "2022-01-01 06:00:00    25.131167  35.709622    1607.001228          6   \n",
+      "2022-01-01 07:00:00    23.182844  31.679920    1633.955330          8   \n",
+      "2022-01-01 08:00:00    25.391999  46.399364    1240.309224          6   \n",
+      "2022-01-01 09:00:00    22.212549  32.418464    1705.420336          1   \n",
+      "\n",
+      "                     RenewableEnergy  EnergyConsumption  HVACUsage_Off  \\\n",
+      "Timestamp                                                                \n",
+      "2022-01-01 00:00:00         2.774699          75.364373          False   \n",
+      "2022-01-01 01:00:00        21.831384          83.401855          False   \n",
+      "2022-01-01 02:00:00         6.764672          78.270888           True   \n",
+      "2022-01-01 03:00:00         8.623447          56.519850           True   \n",
+      "2022-01-01 04:00:00         3.071969          70.811732          False   \n",
+      "2022-01-01 05:00:00        17.626690          84.321885           True   \n",
+      "2022-01-01 06:00:00        24.264702          76.165791          False   \n",
+      "2022-01-01 07:00:00        27.517099          74.131906           True   \n",
+      "2022-01-01 08:00:00         2.307595          78.206236          False   \n",
+      "2022-01-01 09:00:00        29.140071          77.992214          False   \n",
+      "\n",
+      "                     HVACUsage_On  LightingUsage_Off  LightingUsage_On  \\\n",
+      "Timestamp                                                                \n",
+      "2022-01-01 00:00:00          True               True             False   \n",
+      "2022-01-01 01:00:00          True              False              True   \n",
+      "2022-01-01 02:00:00         False               True             False   \n",
+      "2022-01-01 03:00:00         False              False              True   \n",
+      "2022-01-01 04:00:00          True               True             False   \n",
+      "2022-01-01 05:00:00         False               True             False   \n",
+      "2022-01-01 06:00:00          True               True             False   \n",
+      "2022-01-01 07:00:00         False               True             False   \n",
+      "2022-01-01 08:00:00          True               True             False   \n",
+      "2022-01-01 09:00:00          True               True             False   \n",
+      "\n",
+      "                     DayOfWeek_Friday  DayOfWeek_Monday  DayOfWeek_Saturday  \\\n",
+      "Timestamp                                                                     \n",
+      "2022-01-01 00:00:00             False              True               False   \n",
+      "2022-01-01 01:00:00             False             False                True   \n",
+      "2022-01-01 02:00:00             False             False               False   \n",
+      "2022-01-01 03:00:00             False             False               False   \n",
+      "2022-01-01 04:00:00              True             False               False   \n",
+      "2022-01-01 05:00:00             False             False               False   \n",
+      "2022-01-01 06:00:00              True             False               False   \n",
+      "2022-01-01 07:00:00             False             False               False   \n",
+      "2022-01-01 08:00:00             False             False               False   \n",
+      "2022-01-01 09:00:00             False             False               False   \n",
+      "\n",
+      "                     DayOfWeek_Sunday  DayOfWeek_Thursday  DayOfWeek_Tuesday  \\\n",
+      "Timestamp                                                                      \n",
+      "2022-01-01 00:00:00             False               False              False   \n",
+      "2022-01-01 01:00:00             False               False              False   \n",
+      "2022-01-01 02:00:00              True               False              False   \n",
+      "2022-01-01 03:00:00             False               False              False   \n",
+      "2022-01-01 04:00:00             False               False              False   \n",
+      "2022-01-01 05:00:00              True               False              False   \n",
+      "2022-01-01 06:00:00             False               False              False   \n",
+      "2022-01-01 07:00:00             False                True              False   \n",
+      "2022-01-01 08:00:00              True               False              False   \n",
+      "2022-01-01 09:00:00             False               False               True   \n",
+      "\n",
+      "                     DayOfWeek_Wednesday  Holiday_No  Holiday_Yes  \n",
+      "Timestamp                                                          \n",
+      "2022-01-01 00:00:00                False        True        False  \n",
+      "2022-01-01 01:00:00                False        True        False  \n",
+      "2022-01-01 02:00:00                False        True        False  \n",
+      "2022-01-01 03:00:00                 True        True        False  \n",
+      "2022-01-01 04:00:00                False        True        False  \n",
+      "2022-01-01 05:00:00                False       False         True  \n",
+      "2022-01-01 06:00:00                False       False         True  \n",
+      "2022-01-01 07:00:00                False       False         True  \n",
+      "2022-01-01 08:00:00                False        True        False  \n",
+      "2022-01-01 09:00:00                False        True        False  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.get_dummies(df))"
    ]
   },
   {
